--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.1",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.3.1"
+    "distube": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.6.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.54.0"
