--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
+    "@distube/deezer": "^1.0.0",
+    "@distube/soundcloud": "^1.3.3",
+    "@distube/spotify": "^1.5.1",
+    "@distube/yt-dlp": "^1.1.3",
+    "date-fns": "^2.30.0",
+    "date-holidays": "^3.23.1",
     "discord.js": "^14.14.1",
     "distube": "^4.1.1",
     "dotenv": "^16.3.1",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
+    "libsodium-wrappers": "^0.7.13",
     "mysql2": "^3.6.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "eslint": "^8.54.0"
